# caristeo_ai_backend

./: .gitignore  README.md  pyproject.toml  qna_app.py  requirements.txt
src/aws/: S3.py
src/core/: config.py
src/genai/: Bedrock.py  Mistral.py  Prompts.py
src/lambdas/page_ocr/: lambda_function.py  requirements.txt
src/lambdas/page_ocr/aws/: S3.py
src/lambdas/page_ocr/genai/: Bedrock.py
src/lambdas/page_ocr/models/: ocr_model.py
src/lambdas/page_ocr/prompts/: Prompts.py
src/lambdas/split_n_convert_pdf/: lambda_function.py  requirements.txt
src/lambdas/split_n_convert_pdf/aws/: S3.py
terraform/: .terraform.lock.hcl  bucket.tf  iam.tf  lambda.tf  main.tf  sqs.tf  variables.tf
terraform/modules/lambda_function/: lambda.tf  output.tf  variables.tf
terraform/modules/lambda_layer/: layer.tf  output.tf  variables.tf
terraform/terraform_backend/: main.tf
