[project]
name = "caristeo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.9",
    "langchain-aws>=0.2.22",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pydantic-ai-slim[bedrock]>=0.1.10",
    "pypdf>=5.4.0",
    "pypdfium2>=4.30.1",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pydantic-ai-slim[mistral]>=0.1.10",
]

# [tool.uv.workspace]
# members = [
#     "src/lambdas/page_ocr",
# ]
